# docs/swagger.json
@@ -166,6 +166,27 @@
                 "responses": {}
             }
         },
+        "/api/dashboard": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Ambil data dashboard",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "Get Dashboard Information",
+                "responses": {}
+            }
+        },
         "/api/lending-history": {
             "get": {
                 "security": [
