# dto/Dashboard.go
@@ -1,0 +1,7 @@
+package dto
+
+type Dashboard struct {
+	TotalAdmin   int64 `json:"total_admin"`
+	TotalStudent int64 `json:"total_student"`
+	TotalBook    int64 `json:"total_book"`
+}
